--- a/c2.html
+++ b/c2.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="icon" type="image/png" href="https://unsplash.com/@manufactured?photo=gI4lxtU7NHI" />
 </head>
-<body  id="backgroundpicture1">
+<body>
 
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -36,12 +36,34 @@
   </li>
 </ul>
 
-<article>
-  <h1>Chapter 15</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-</article>
+<center>
+<div class="jumbotron">
+  <h1>Iterations</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    <p>This chapter was all about the fundamentals of computing - algorithms.</p>
+		<p>Algorithms are an order of things to do anything, E.G. brushing your teeth is an algorithm.</p>
+		<p>We learned how algorithms are drawn, using different shapes. We also learned about Pseudocode, which is another way to design a program.</p>
+	</div>
+  </div>
+</div>
 
+<iframe src="https://docs.google.com/document/d/1vSh1OEtIC3C0nCg5cvnfsSTaRGyRv_ccdjVCSZPEY1U/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<div id="notes" class="jumbotron">
+  <h1>Notes</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    <p>A variable is something which has data assigned to it - either an integar or text. (E.G: age = 14) 'age' is the variable name, and 14 is the assigned data.</p>
+		<br></br><p>When planning a program, we can use flowcharts or pseudocode. There are examples of both on the document above. Pseudocode is structured English.</p>
+		<br></br><p>In flowcharts, you need to start and end using a rounded rectangle. For inputs, you need to use a parallelogram, and for an instruction, you can use a rectangle. For an 'if' or 'while' statement, a diamond shape needs to be used. Arrows are also used to show the 'flow' of the chart.</p>
+		<br></br><p>A constant is something which has data assigned to it, just like a variable, however the data cannot change; it is constant.</p>
+		<br></br><p>There are three types of operators, or signs that are used. Arithmetic operators include '+' or '-'. Relational operators include greater than and lesser than symbols. Finally, Boolean operators are 'and', 'not' and 'or'.</p>
+		<br></br><p color="white">Last of all, we looked at the most effective ways to use IF statements. We should try use ELIF instead of IF, because ELIF is more efficient, due to ending iteration after finding the correct answer. Using many IF statements means that even if the answer has been found, if will still go through the other statements, which wastes time.</p>
+		
+	</div>
+  </div>
+</div>
 <script>
 
 window.onscroll = function() {myFunction()};
