--- a/ambitions.html
+++ b/ambitions.html
@@ -42,5 +42,30 @@
   </div>
 </div>
 
+
+<div class="bgimg-8 w3-opacity w3-display-container">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <h1>My Interests</h1>
+	<h5>In my spare time, I enjoy playing video games, programming, skiing, and photography. Most of these involve the use of computers, so I'm quite used to Windows.</h5>
+    <h1>Video Games</h1>
+	<h5>Since I was a young child, I have loved video games. I used to play on an N64, Gamecube, and the old Playstation 1. I currenty play on Windows with some friends.</h5>
+    <h1>Programming</h1>
+	<h5>For several years, I have got fluent in web design usign HTML, CSS and Javascript, and I know Python well. I also know some Java and C#, which I am currently learning. </h5>
+    <h1>Skiing</h1>
+	<h5>This a relatively new hobby, as I have started going to a dry Ski slope, local to where I live. Soon I hope to go to the Alps to Ski.</h5>
+    <h1>Photography</h1>
+	<h5>For quite a while, I have enjoyed photography. I have been an assistant photographer for three weddings now, and I currently enjoy taking video with my camera.</h5>
+  </div>
+</div>
+
+<div class="bgimg-9 w3-opacity w3-display-container">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <h1>Future Plans</h1>
+	<h5>I spend lots of time with computers and with design work, so these go hand in hand with a job such as digital design, or web design.</h5> 
+	<h5>I also love film and photography, which go well with both design and compters.</h5>
+	<h5>These subjects combined have many different possabilities for a job, but these are likely the things I would like to persue.</h5>
+    </div>
+</div>
+
 </body>
 </html>
