--- a/c1.html
+++ b/c1.html
@@ -9,11 +9,11 @@
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="icon" type="image/png" href="https://unsplash.com/@manufactured?photo=gI4lxtU7NHI" />
 </head>
-<body id="backgroundpicture1">
+<body>
 
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="#">Ambitions</a></li>
+  <li><a href="ambitions.html">Ambitions</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">GCSE Course Work</a>
     <div class="dropdown-content">
@@ -60,6 +60,7 @@
 		<br></br><p>A constant is something which has data assigned to it, just like a variable, however the data cannot change; it is constant.</p>
 		<br></br><p>There are three types of operators, or signs that are used. Arithmetic operators include '+' or '-'. Relational operators include greater than and lesser than symbols. Finally, Boolean operators are 'and', 'not' and 'or'.</p>
 		<br></br><p color="white">Last of all, we looked at the most effective ways to use IF statements. We should try use ELIF instead of IF, because ELIF is more efficient, due to ending iteration after finding the correct answer. Using many IF statements means that even if the answer has been found, if will still go through the other statements, which wastes time.</p>
+		<br></br><br></br>
 	</div>
   </div>
 </div>
