--- a/c2.html
+++ b/c2.html
@@ -13,7 +13,7 @@
 
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="#">Ambitions</a></li>
+  <li><a href="ambitions.html">Ambitions</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">GCSE Course Work</a>
     <div class="dropdown-content">
@@ -41,14 +41,20 @@
   <h1>Iterations</h1>
   <div class="panel panel-default">
     <div class="panel-body">
-	    <p>This chapter was all about the fundamentals of computing - algorithms.</p>
-		<p>Algorithms are an order of things to do anything, E.G. brushing your teeth is an algorithm.</p>
-		<p>We learned how algorithms are drawn, using different shapes. We also learned about Pseudocode, which is another way to design a program.</p>
+	    <p>Another fundamental part of computers and the logic behind them is Iterations.</p>
+		<p>When you iterate something, it is repeated, usually until a condition is met.</p>
+		<p>In this chapter we looked at different methods of using iterations is python, such as WHILE, IF, or DO UNTIL.</p>
 	</div>
   </div>
 </div>
 
 <iframe src="https://docs.google.com/document/d/1vSh1OEtIC3C0nCg5cvnfsSTaRGyRv_ccdjVCSZPEY1U/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<iframe src="https://docs.google.com/document/d/177jw9Hv87xtp9Phyi7i6ojbUeVyEdcKRLkEfyaGuYCY/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<iframe src="https://docs.google.com/document/d/1X-eHw14sfXwWD732BtSieJ4_h_LgTR1TM5S9gfDu13Q/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<iframe src="https://docs.google.com/document/d/1MqMc54F3UGZPTO8AJiHBxHonz2mNAGX6RPnwnnoNyyI/edit" width = '800' height = '500'></iframe>
 <br></br><br></br>
 <div id="notes" class="jumbotron">
   <h1>Notes</h1>
@@ -60,7 +66,7 @@
 		<br></br><p>A constant is something which has data assigned to it, just like a variable, however the data cannot change; it is constant.</p>
 		<br></br><p>There are three types of operators, or signs that are used. Arithmetic operators include '+' or '-'. Relational operators include greater than and lesser than symbols. Finally, Boolean operators are 'and', 'not' and 'or'.</p>
 		<br></br><p color="white">Last of all, we looked at the most effective ways to use IF statements. We should try use ELIF instead of IF, because ELIF is more efficient, due to ending iteration after finding the correct answer. Using many IF statements means that even if the answer has been found, if will still go through the other statements, which wastes time.</p>
-		
+		<br></br><br></br>
 	</div>
   </div>
 </div>
