--- a/c15.html
+++ b/c15.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="icon" type="image/png" href="https://unsplash.com/@manufactured?photo=gI4lxtU7NHI" />
 </head>
-<body  id="backgroundpicture1">
+<body>
 
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -35,12 +35,47 @@
     </div>
   </li>
 </ul>
+<center>
+<div class="jumbotron">
+  <h1>Iterations</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    <p>Another fundamental part of computers and the logic behind them is Iterations.</p>
+		<p>When you iterate something, it is repeated, usually until a condition is met.</p>
+		<p>In this chapter we looked at different methods of using iterations is python, such as WHILE, IF, or DO UNTIL.</p>
+	</div>
+  </div>
+</div>
 
-<article>
-  <h1>Chapter 15</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-</article>
+<iframe src="https://docs.google.com/document/d/1vSh1OEtIC3C0nCg5cvnfsSTaRGyRv_ccdjVCSZPEY1U/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<iframe src="https://docs.google.com/document/d/177jw9Hv87xtp9Phyi7i6ojbUeVyEdcKRLkEfyaGuYCY/edit" width = '800' height = '500'></iframe>
+<br></br><br></br>
+<div id="notes" class="jumbotron">
+  <h1>Notes</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    <p>A variable is something which has data assigned to it - either an integar or text. (E.G: age = 14) 'age' is the variable name, and 14 is the assigned data.</p>
+		<br></br><p>When planning a program, we can use flowcharts or pseudocode. There are examples of both on the document above. Pseudocode is structured English.</p>
+		<br></br><p>In flowcharts, you need to start and end using a rounded rectangle. For inputs, you need to use a parallelogram, and for an instruction, you can use a rectangle. For an 'if' or 'while' statement, a diamond shape needs to be used. Arrows are also used to show the 'flow' of the chart.</p>
+		<br></br><p>A constant is something which has data assigned to it, just like a variable, however the data cannot change; it is constant.</p>
+		<br></br><p>There are three types of operators, or signs that are used. Arithmetic operators include '+' or '-'. Relational operators include greater than and lesser than symbols. Finally, Boolean operators are 'and', 'not' and 'or'.</p>
+		<br></br><p color="white">Last of all, we looked at the most effective ways to use IF statements. We should try use ELIF instead of IF, because ELIF is more efficient, due to ending iteration after finding the correct answer. Using many IF statements means that even if the answer has been found, if will still go through the other statements, which wastes time.</p>
+		<br></br><br></br>
+	</div>
+  </div>
+</div>
+<script>
 
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-navbar" + " w3-card-2" + " w3-animate-top" + " w3-white";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
+    }
+}
+</script>
 </body>
 </html>
