--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="ambitions.html">Ambitions</a></li>
+  <li><a href="index.html">Bome</a></li>
+  <li><a href="ambitions.html">Bambitions</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">GCSE Course Work</a>
     <div class="dropdown-content">
